# openpsy

./: CMakeLists.txt  README.md  openpsy.pro
TestWindow/: CMakeLists.txt  TestWindow.pro  buttonstate.cpp  buttonstate.h  help.ui  helpdialog.cpp  helpdialog.h  image.ui  imagedialog.cpp  imagedialog.h  main.cpp  manual.txt  qwebkitscriptengine.cpp  qwebkitscriptengine.h  qwebviewscriptable.cpp  qwebviewscriptable.h  resources.qrc  testwindow.cpp  testwindow.h  testwindow.ui
TestWindow/quazip/quazip/: quazip.pro
launcher/: CMakeLists.txt  configdialog.cpp  configdialog.h  configdialog.ui  launcher.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  recources.qrc
plotter/: CMakeLists.txt  plotter.cpp  plotter.h  plotter.pro  plotter_global.h  plotterinterface.h
